# subprocess_manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
include/: subprocess_manager.h
src/: subprocess_manager.cpp
test/: task.cpp  test_env_1.bat  test_env_2.bat  test_subprocess_manager.cpp  utest.h
